@@ -1,130 +1,108 @@
 package dk.trustworks.intranet.contracts.services;
 
+import dk.trustworks.intranet.contracts.exceptions.ContractValidationException.ErrorType;
 import dk.trustworks.intranet.contracts.model.ContractTypeDefinition;
-import dk.trustworks.intranet.contracts.model.enums.ContractType;
+import dk.trustworks.intranet.contracts.model.enums.LifecycleStatus;
 import jakarta.enterprise.context.ApplicationScoped;
 import lombok.extern.jbosslog.JBossLog;
 
 import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
+import java.util.Locale;
 
 /**
- * Service for validating contract type codes.
- * Supports both legacy enum-based contract types and dynamic database-defined types.
- *
- * <p>Validation strategy:
- * <ol>
- *   <li>Check if the code matches a legacy ContractType enum value</li>
- *   <li>Check if the code exists in the contract_type_definitions table</li>
- *   <li>Return true if either condition is met</li>
- * </ol>
+ * Classifies agreement availability for contract create/update operations.
+ * Contract type codes are DB-backed only; the former enum bypass was removed once
+ * V397 guaranteed definitions for all five legacy codes.
  */
 @JBossLog
 @ApplicationScoped
 public class ContractTypeValidationService {
 
-    /**
-     * Validate if a contract type code is valid.
-     * Checks both legacy enum values and database-defined types.
-     *
-     * @param contractTypeCode The contract type code to validate (e.g., "SKI0217_2025")
-     * @return true if valid, false otherwise
-     */
+    private static final DateTimeFormatter DISPLAY_DATE =
+            DateTimeFormatter.ofPattern("d MMM uuuu", Locale.ENGLISH);
+
     public boolean isValidContractType(String contractTypeCode) {
-        return isValidContractType(contractTypeCode, null);
+        return validate(contractTypeCode, null).valid();
+    }
+
+    public boolean isValidContractType(String contractTypeCode, LocalDate validationDate) {
+        return validate(contractTypeCode, validationDate).valid();
     }
 
     /**
-     * Validate if a contract type code is valid on a specific date.
-     * Checks both legacy enum values and database-defined types with date validity.
-     *
-     * @param contractTypeCode The contract type code to validate (e.g., "SKI0217_2025")
-     * @param validationDate The date to validate against (if null, no date validation)
-     * @return true if valid, false otherwise
+     * Resolve the stable machine code and human-readable reason for a contract type.
+     * A null validation date means today in Europe/Copenhagen.
      */
-    public boolean isValidContractType(String contractTypeCode, LocalDate validationDate) {
-        if (contractTypeCode == null || contractTypeCode.trim().isEmpty()) {
-            log.debug("Contract type code is null or empty");
-            return false;
+    public ContractTypeValidationResult validate(String contractTypeCode, LocalDate validationDate) {
+        LocalDate effectiveDate = validationDate != null ? validationDate : LifecycleStatus.today();
+        if (contractTypeCode == null || contractTypeCode.isBlank()) {
+            return invalid(ErrorType.CONTRACT_TYPE_REQUIRED, "Contract type code is required.");
         }
 
         String code = contractTypeCode.trim();
-
-        // Check if it matches a legacy enum value
-        if (isLegacyEnumValue(code)) {
-            log.debug("Contract type " + code + " is a legacy enum value");
-            return true;
-        }
-
-        // Check if it exists in the database
-        if (existsInDatabase(code, validationDate)) {
-            log.debug("Contract type " + code + " exists in database and is valid on " + validationDate);
-            return true;
-        }
-
-        log.warn("Contract type " + code + " is not valid on " + validationDate + " - not in enum or database");
-        return false;
-    }
-
-    /**
-     * Check if a contract type code matches a legacy ContractType enum value.
-     *
-     * @param code The contract type code
-     * @return true if it matches an enum value
-     */
-    public boolean isLegacyEnumValue(String code) {
-        try {
-            ContractType.valueOf(code);
-            return true;
-        } catch (IllegalArgumentException e) {
-            return false;
-        }
-    }
-
-    /**
-     * Check if a contract type code exists in the database.
-     *
-     * @param code The contract type code
-     * @return true if it exists and is active
-     */
-    public boolean existsInDatabase(String code) {
-        return existsInDatabase(code, null);
-    }
-
-    /**
-     * Check if a contract type code exists in the database and is valid on a specific date.
-     *
-     * @param code The contract type code
-     * @param validationDate The date to validate against (if null, only checks active status)
-     * @return true if it exists, is active, and is valid on the specified date
-     */
-    public boolean existsInDatabase(String code, LocalDate validationDate) {
         ContractTypeDefinition definition = ContractTypeDefinition.findByCode(code);
-        if (definition == null || !definition.isActive()) {
-            return false;
+        if (definition == null) {
+            log.warnf("Agreement %s was not found during contract validation", code);
+            return invalid(ErrorType.CONTRACT_TYPE_NOT_FOUND,
+                    "Agreement '" + code + "' was not found.");
         }
 
-        // If no validation date provided, only check active status
-        if (validationDate == null) {
-            return true;
-        }
-
-        // Check if the contract type is valid on the specified date
-        return definition.isValidOn(validationDate);
+        LifecycleStatus status = LifecycleStatus.forAgreement(
+                definition.isActive(), definition.getValidFrom(), definition.getValidUntil(), effectiveDate);
+        return switch (status) {
+            case ACTIVE -> new ContractTypeValidationResult(true, status, null, null);
+            case ARCHIVED -> invalid(status, ErrorType.CONTRACT_TYPE_ARCHIVED,
+                    "This contract's agreement is archived — restore it or change the agreement to save.");
+            case SCHEDULED -> invalid(status, ErrorType.CONTRACT_TYPE_NOT_YET_VALID,
+                    "This agreement starts on " + format(definition.getValidFrom())
+                            + " and is not available for this contract.");
+            case EXPIRED -> invalid(status, ErrorType.CONTRACT_TYPE_EXPIRED,
+                    "This agreement expired on " + formatInclusiveEnd(definition.getValidUntil())
+                            + " and is not available for this contract.");
+            case DISABLED -> throw new IllegalStateException("DISABLED is not an agreement lifecycle status");
+        };
     }
 
-    /**
-     * Get a user-friendly error message for an invalid contract type.
-     *
-     * @param contractTypeCode The invalid contract type code
-     * @return Error message
-     */
-    public String getValidationErrorMessage(String contractTypeCode) {
-        if (contractTypeCode == null || contractTypeCode.trim().isEmpty()) {
-            return "Contract type code is required";
-        }
+    public boolean existsInDatabase(String code) {
+        return validate(code, null).valid();
+    }
 
-        return "Invalid contract type '" + contractTypeCode + "'. " +
-               "Must be either a valid legacy type (PERIOD, SKI0217_2021, SKI0217_2025, SKI0215_2025, SKI0217_2025_V2) " +
-               "or an active contract type defined via the contract types API.";
+    public boolean existsInDatabase(String code, LocalDate validationDate) {
+        return validate(code, validationDate).valid();
+    }
+
+    public String getValidationErrorMessage(String contractTypeCode) {
+        return getValidationErrorMessage(contractTypeCode, null);
+    }
+
+    public String getValidationErrorMessage(String contractTypeCode, LocalDate validationDate) {
+        ContractTypeValidationResult result = validate(contractTypeCode, validationDate);
+        return result.valid() ? null : result.message();
+    }
+
+    private static String format(LocalDate date) {
+        return date != null ? DISPLAY_DATE.format(date) : "the configured start date";
+    }
+
+    private static String formatInclusiveEnd(LocalDate endExclusive) {
+        return endExclusive != null
+                ? DISPLAY_DATE.format(endExclusive.minusDays(1))
+                : "the configured end date";
+    }
+
+    private static ContractTypeValidationResult invalid(ErrorType type, String message) {
+        return invalid(null, type, message);
+    }
+
+    private static ContractTypeValidationResult invalid(LifecycleStatus status, ErrorType type, String message) {
+        return new ContractTypeValidationResult(false, status, type, message);
+    }
+
+    public record ContractTypeValidationResult(
+            boolean valid,
+            LifecycleStatus status,
+            ErrorType errorType,
+            String message) {
     }
 }
